use encoder to send bytes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,14 @@ name = "defmt-stdout"
 version = "0.1.0"
 edition = "2024"
 
+[lib]
+path = "src/lib.rs"
+
+
+[[bin]]
+path = "src/main.rs"
+name = "defmt-stdout"
+
+
 [dependencies]
 defmt = "1.0.1"
