--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,14 @@
 [build]
-target = "x86_64-unknown-linux-musl"
+target = "x86_64-unknown-linux-gnu"
+
+[target.x86_64-unknown-linux-gnu]
+rustflags = [
+  "-C", "relocation-model=static",
+  "-C", "link-arg=-T/usr/lib/x86_64-linux-gnu/ldscripts/elf_x86_64.x",
+  "-C", "link-arg=-Tdefmt.x"
+]
+linker = "gcc"
+runner = "./runner.sh"
 
 [target.x86_64-unknown-linux-musl]
 rustflags = [
