--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,16 @@
 [package]
 name = "defmt-stdout"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2024"
-license="MIT"
-description="Transmit defmt log messages to the standard output (Linux only)"
-repository = "https://github.com/SakiiCode/defmt-stdout"
+description = "Transmit defmt log messages to the standard output (Linux only)"
 readme = "README.md"
-categories=["command-line-interface", "embedded", "simulation"]
-keywords=["defmt", "stdout", "simulator"]
+repository = "https://github.com/SakiiCode/defmt-stdout"
+license = "MIT"
+keywords = ["defmt", "simulator", "stdout"]
+categories = ["command-line-interface", "embedded", "simulation"]
 
 [lib]
 path = "src/lib.rs"
-
 
 [dependencies]
 defmt = "1.0.1"
